@@ -7,7 +7,7 @@ INSTRUCTIONS
 3. Run Convert.bat.
 4. This should generate a conversion file called output.v2
 5. Copy output.v2 to your victoria 2 savegames directory and load the converted savegame in Victoria 2.
-6. If it crashes, leave a message on the forum thread. If possible, upload your EU3 savegame and the log.txt generateg by the converter.
+6. If it crashes, leave a message on the forum thread. If possible, upload your EU3 savegame and the log.txt generated by the converter.
 
 ----
 NOTES
